--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "use-debounce": "^9.0.3"
